@@ -1,3 +1,7 @@
+List of changes/additions (for 1.7)
+
+- now in the public domain
+
 List of changes/additions (for 1.6).  See ChangeLog for more details.
 
 - Fix Linux/BSD generation bug.
@@ -24,8 +28,5 @@ List of changes/additions (for 1.5).  See ChangeLog for more details.
 - fixtrack script was updated; minor changes is makefiles
 
 Grigory
-
-Also: the copyright verbage has been changed to explicitly allow
-modification of the code.   Enjoy,
 
 // marc
